kubernetes/labs/CKS/OPA/block-gcr-repo-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockGcrRepo
metadata:
  name: block-gcr-repo
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "kube-system"
      - "default"
